--- a/templates/main/posts.html
+++ b/templates/main/posts.html
@@ -11,8 +11,9 @@
     <input type="checkbox" id="add_post" class="d-none">
     <form action="" method="post" class="post_form">
         {% csrf_token %}
-        {{ form|crispy }}
+        {{ post_form|crispy }}
         <button type="submit" class="btn btn-sm btn-outline-primary">добавить</button>
+        <input class="btn btn-sm btn-outline-danger" type="reset" value="очистить">
     </form>
 </div>
 
@@ -29,14 +30,27 @@
             <h3>{{post.title}}</h3>
             <p>{{post.text}}</p>
             <div class="bg-light text-center">
-                <label for="view_comments">показать комментарии</label>
-                <input type="checkbox" id="view_comments" class="d-none">
+                <label for="view_comments_{{ post.id }}" class=" btn">показать комментарии</label>
+                <input type="checkbox" id="view_comments_{{ post.id }}" class="d-none view_comments">
+                <form action="{% url 'add_comment' post.id %}" class="comment_form" method="POST">
+                    {% csrf_token %}
+                    {{ comment_form|crispy }}
+                    <button type="submit" class="btn btn-sm btn-outline-primary">добавить комментарий</button>
+                    <input class="btn btn-sm btn-outline-danger" type="reset" value="очистить">
+                </form>
+                <div class="comments text-start d-none">
+                    {% for comment in post.comments.all %}
+                    <div class="row p-3 border-bottom">
+                        <div class="d-flex justify-content-between">
+                            <span>{{ comment.date_create }}</span>
+                            <span>{{ comment.author }}</span>
+                        </div>
+                        <p>{{ comment.text }}</p>
+                    </div>
+                    {% endfor %}
+                </div>
             </div>
-            <div>
-                {% for comment in post.comments.all %}
-                {{ comment }}
-                {{ endfor }}
-            </div>
+
         </div>
 
     </div>
